removed layout bug on small screens

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -273,6 +273,10 @@ input {
     padding: 0;
     list-style-type: none;
     text-align: center;
+
+    li {
+      display: inline;
+    }
   }
 
   a {
